...
                        val selectedOffset = (gap + (targetSize + gap) * selectedPosition).roundToInt() +
                            (targetSize - indicatorSize) / 2
                        if (orientation == Orientation.Horizontal) IntOffset(selectedOffset, 0)
                        else IntOffset(0, selectedOffset)
                    }
                    .size(40.dp)
                    .testTag("selected_navigation_indicator"),
                shape = BeelineBubbleShape,
                color = MaterialTheme.colorScheme.secondaryContainer,
            ) {}
            content()
        }
    }
...
